# DistributedSystemsHW

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
app/master-node/: CMakeLists.txt  compositeaddmessagerequest.cpp  compositeaddmessagerequest.h  compositepingrequest.cpp  compositepingrequest.h  constants.h  main.cpp  masterhttpsession.cpp  masterhttpsession.h  masternode.cpp  masternode.h
app/master-node/addmessagerequest/: addmessagerequest.cpp  addmessagerequest.h
app/master-node/httpsession/: httpsession.cpp  httpsession.h
app/master-node/masternode/: masternode.cpp  masternode.h
app/master-node/secondary/: secondarynode.cpp  secondarynode.h  secondarysnapshot.h  secondarystate.cpp  secondarystate.h
app/master-node/storage/: storage.h
libs/: CMakeLists.txt
libs/communicationendpoint/: CMakeLists.txt
libs/communicationendpoint/include/communicationendpoint/: communicationendpoint.h
libs/communicationendpoint/src/: communicationendpoint.cpp
libs/constants/: CMakeLists.txt
libs/constants/include/constants/: constants.h
libs/constants2/: CMakeLists.txt
libs/constants2/include/constants2/: constants2.h
libs/future-utils/: CMakeLists.txt
libs/future-utils/include/future-utils/: whensome.h
libs/future-utils/tests/: CMakeLists.txt  main.cpp  test_whensome.cpp
libs/httpsession/: CMakeLists.txt
libs/httpsession/include/httpsession/: httpsession.h
libs/httpsession/src/: httpsession.cpp
libs/iocontextpool/: CMakeLists.txt
libs/iocontextpool/include/iocontextpool/: iocontextpool.h
libs/iocontextpool/src/: iocontextpool.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: entity.hpp  globallogger.h  idcounter.hpp  identity.hpp  logger.h  setup.h  severity.h  threadmodel.h  translationunit.h
libs/logger/src/: attributes.cpp  formatter.cpp  formatter.hpp  setup.cpp  severity.cpp  translationunit.cpp  uptime.cpp  uptime.h
libs/messagesstorage/: CMakeLists.txt
libs/messagesstorage/include/messagesstorage/: messagesstorage.h
libs/messagesstorage/src/: messagesstorage.cpp
libs/messagesstorage/tests/: CMakeLists.txt
libs/net-utils/: CMakeLists.txt
libs/net-utils/include/net-utils/: httpsession.h  iocontextpool.h  launchwithdelay.h  socketacceptor.h  thenpost.h
libs/net-utils/src/: httpsession.cpp  iocontextpool.cpp  launchwithdelay.cpp  socketacceptor.cpp
libs/proto/: CMakeLists.txt
libs/proto/include/proto/: communicationendpoint.h  concepts.h  deserialization.h  endpoint.h  enums.h  exceptions.h  proto.h  serialization.h  socketwrapper.h  timestamp.h
libs/proto/src/: communicationendpoint.cpp  deserialization.cpp  endpoint.cpp  enums.cpp  frame.h  incomingrequestsmanager.cpp  incomingrequestsmanager.h  outcomingrequestsmanager.cpp  outcomingrequestsmanager.h  outcomingrequestsmanager_impl.h  proto.cpp  serialization.cpp  socketwrapper.cpp  socketwrapper.h  timestamp.cpp
libs/proto/src/codes/: codes.cpp  codes.h
libs/proto/src/deserialization/: bufferdeserializer.cpp  bufferdeserializer.h  bufferdeserializer_impl.h
libs/proto/src/frame/: frame.cpp  frame.h
libs/proto/src/incomingrequestcontext/: abstractincomingrequestcontext.cpp  abstractincomingrequestcontext.h  addmessage.cpp  addmessage.h  getmessages.cpp  getmessages.h  ping.cpp  ping.h  secondarynodeready.cpp  secondarynodeready.h
libs/proto/src/incomingrequestsmanager/: incomingrequestsmanager.cpp  incomingrequestsmanager.h
libs/proto/src/outcomingrequestcontext/: abstractoutcomingrequestcontext.cpp  abstractoutcomingrequestcontext.h  addmessage.cpp  addmessage.h  getmessages.cpp  getmessages.h  invalidationreason.cpp  invalidationreason.h  ping.cpp  ping.h  secondarynodeready.cpp  secondarynodeready.h
libs/proto/src/outcomingrequestsmanager/: outcomingrequestsmanager.cpp  outcomingrequestsmanager.h
libs/proto/src/request/: abstractrequest.h  addmessage.cpp  addmessage.h  getmessages.cpp  getmessages.h  ping.cpp  ping.h  secondarynodeready.cpp  secondarynodeready.h
libs/proto/src/response/: abstractresponse.h  addmessage.cpp  addmessage.h  getmessages.cpp  getmessages.h  pong.cpp  pong.h  secondarynodeready.cpp  secondarynodeready.h
libs/proto/src/serialization/: buffersequenceserializer.cpp  buffersequenceserializer.h  buffersequenceserializer_impl.h
libs/proto/src/socketwrapper/: buffer.cpp  buffer.h  socketwrapper.cpp  socketwrapper.h
libs/proto/tests/: CMakeLists.txt  test_deserialization.cpp  test_serialization.cpp
libs/proto2/: CMakeLists.txt
libs/proto2/include/proto2/: communicationendpoint.h  duration.h  endpoint.h  enums.h  exceptions.h  frame.hpp  sharedpromise.h  signal.h  timestamp.h
libs/proto2/src/: codes.cpp  communicationendpoint.cpp  duration.cpp  endpoint.cpp  enums.cpp  frame.cpp  frame.hpp  outcomingrequestsmanager.cpp  outcomingrequestsmanager.h  timestamp.cpp
libs/proto2/src/codes/: codes.cpp  codes.h
libs/proto2/src/deserialization/: bufferdeserializer.cpp  bufferdeserializer.h  bufferdeserializer_impl.h
libs/proto2/src/frame/: frame.cpp  frame.h  frame.hpp
libs/proto2/src/incomingrequestcontext/: abstractincomingrequestcontext.cpp  abstractincomingrequestcontext.h  addmessage.cpp  addmessage.h  getmessages.cpp  getmessages.h  ping.cpp  ping.h  secondarynodeready.cpp  secondarynodeready.h
libs/proto2/src/incomingrequestsmanager/: incomingrequestsmanager.cpp  incomingrequestsmanager.h
libs/proto2/src/outcomingrequestcontext/: abstractoutcomingrequestcontext.cpp  abstractoutcomingrequestcontext.h  addmessage.cpp  addmessage.h  getmessages.cpp  (+5 more)
libs/protocol/: CMakeLists.txt
libs/protocol/src/: buffer.cpp  codes.cpp  frame.cpp  framebuilder.cpp  message.cpp
libs/protocol/tests/: CMakeLists.txt  test_buffer.cpp  test_frame.cpp  test_message.cpp
libs/reflection/: CMakeLists.txt
libs/reflection/src/: serialization.cpp
libs/reflection/tests/: CMakeLists.txt  test_deserialization.cpp  test_serialization.cpp
libs/socketacceptor/: CMakeLists.txt
libs/socketacceptor/src/: socketacceptor.cpp
libs/utils/: CMakeLists.txt
libs/utils/src/: duration.cpp  timestamp.cpp
(+163 files in other folders)
